[gd_scene load_steps=3 format=3 uid="uid://d3g2f1jdih740"]

[ext_resource type="Script" uid="uid://d1cfgvxw4wmtq" path="res://scenes/combat/combat_status/combat_status_zone.gd" id="1_xp25i"]
[ext_resource type="PackedScene" uid="uid://bu0uuairw61pc" path="res://scenes/combat/combat_status/combat_status_square.tscn" id="2_k7qi1"]

[node name="CombatStatusZone" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1340.0
offset_bottom = -700.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xp25i")

[node name="TopLeft" parent="." instance=ExtResource("2_k7qi1")]
layout_mode = 1
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 180.0
offset_bottom = 180.0

[node name="TopMid" parent="." instance=ExtResource("2_k7qi1")]
layout_mode = 1
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 200.0
offset_right = 379.728
offset_bottom = 178.664

[node name="TopRight" parent="." instance=ExtResource("2_k7qi1")]
layout_mode = 1
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 400.0
offset_right = 579.728
offset_bottom = 178.664

[node name="BotLeft" parent="." instance=ExtResource("2_k7qi1")]
layout_mode = 1
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 200.0
offset_right = 179.248
offset_bottom = 379.024

[node name="BotMid" parent="." instance=ExtResource("2_k7qi1")]
layout_mode = 1
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 200.0
offset_top = 200.0
offset_right = 379.728
offset_bottom = 379.024

[node name="BotRight" parent="." instance=ExtResource("2_k7qi1")]
layout_mode = 1
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 400.0
offset_top = 200.0
offset_right = 579.728
offset_bottom = 379.024
